--- a/Insomnia.yaml
+++ b/Insomnia.yaml
@@ -10,7 +10,7 @@ collection:
     meta:
       id: fld_0cb5c1405f4a4a849f4c9f75da3697b7
       created: 1750012727351
-      modified: 1756495981637
+      modified: 1756506134831
       sortKey: -1750012727351
       description: ""
     children:
@@ -250,6 +250,38 @@ collection:
         headers:
           - name: User-Agent
             value: insomnia/11.2.0
+        authentication:
+          type: bearer
+          token: "{{ _.auth_token }}"
+        settings:
+          renderRequestBody: true
+          encodeUrl: true
+          followRedirects: global
+          cookies:
+            send: true
+            store: true
+          rebuildPath: true
+      - url: "{{ _.localhost }}/api/v1/supplier/pay-debt/5"
+        name: Pay Supplier Debt
+        meta:
+          id: req_247b0fa86d174eae89595e8295fa7e0b
+          created: 1756505686382
+          modified: 1756506184880
+          isPrivate: false
+          description: ""
+          sortKey: -1750120234130
+        method: POST
+        body:
+          mimeType: application/json
+          text: |-
+            {
+            	"amount" : 10000
+            }
+        headers:
+          - name: Content-Type
+            value: application/json
+          - name: User-Agent
+            value: insomnia/11.5.0
         authentication:
           type: bearer
           token: "{{ _.auth_token }}"
@@ -1155,7 +1187,7 @@ collection:
         meta:
           id: req_938650a2bc0c4ad4a98bb5f3529fe057
           created: 1751505201133
-          modified: 1755620132383
+          modified: 1756504856684
           isPrivate: false
           description: ""
           sortKey: -1754257013010
@@ -1795,14 +1827,14 @@ cookieJar:
   meta:
     id: jar_b0cc562de60d4fdca4a5a7d3d65c7333
     created: 1753317367158
-    modified: 1756495981617
+    modified: 1756506134824
 environments:
   name: Base Environment
   meta:
     id: env_24024bd3181047c5ab8739c9b1983ff1
     created: 1749705478341
-    modified: 1756495981625
+    modified: 1756506134830
     isPrivate: false
   data:
-    auth_token: 1|b4VESd9A3h8vAoGHEC1AKWXj53bEvNQEWouDYoxq11e0af1a
+    auth_token: 1|uFFliZqY8vDUHIm2CdIW1n9aUpzJ7yaAEqrnUrNGa164673f
     localhost: 127.0.0.1:8000
